# conversor_rekordbox

./: README.md  pyproject.toml
src/conversor_rekordbox/: __init__.py  cli.py  converter.py  models.py
src/conversor_rekordbox/api/: soundcloud.py
src/conversor_rekordbox/audio/: conversion.py
src/conversor_rekordbox/formats/: __init__.py  enginedj.py  rekordbox.py  serato.py
src/conversor_rekordbox/ui/: app.py  main_window.py
src/conversor_rekordbox/utils/: config.py  deps.py  logger.py
tests/: test_conversion.py
tests/data/: sample_engine.json  sample_rekordbox.xml
